Added favicon and fonts

--- a/esquema-css-dk/html/estetica.html
+++ b/esquema-css-dk/html/estetica.html
@@ -7,6 +7,27 @@
     <meta name="author" content="Nereida Rodríguez Orenes" />
     <meta name="keywords" content="CSS, summary, DAM, resumen" />
     <meta name="description" content="simple guide to CSS" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="../icons/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="../icons/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="../icons/favicon-16x16.png"
+    />
+    <link rel="manifest" href="../icons/site.webmanifest" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/styles.css" />
   </head>
   <body>
@@ -15,7 +36,7 @@
       <nav id="nav-header">
         <ul>
           <li><a href="../html/index.html">Conceptos básicos</a></li>
-          <li><a href="../html/estructura.html">Código</a></li>
+          <li><a href="../html/estructura.html">Estructura</a></li>
           <li><a href="../html/estetica.html">Estética</a></li>
           <li><a href="../html/caja.html">Modelo de caja</a></li>
           <li><a href="../html/trabajo.html">Conceptos avanzados</a></li>
