--- a/esquema-css-dk/html/estructura.html
+++ b/esquema-css-dk/html/estructura.html
@@ -9,7 +9,7 @@
     <meta name="description" content="simple guide to CSS" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&family=Lily+Script+One&display=swap" rel="stylesheet">
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -118,7 +118,7 @@
             <table>
               <thead>
                 <tr>
-                  <th>Pseudoclases tipo <em>child</em></th>
+                  <th colspan="2">Pseudoclases tipo <em>child</em></th>
                 </tr>
               </thead>
               <tbody>
@@ -149,7 +149,7 @@
             <table>
               <thead>
                 <tr>
-                  <th>Pseudoclases para <em>a</em></th>
+                  <th colspan="2">Pseudoclases para <em>a</em></th>
                 </tr>
               </thead>
               <tbody>
@@ -188,7 +188,7 @@
             <table>
               <thead>
                 <tr>
-                  <th>Pseudoelementos más usados</th>
+                  <th colspan="2">Pseudoelementos más usados</th>
                 </tr>
               </thead>
               <tbody>
@@ -277,11 +277,11 @@
               de declararlo es <em>elemento[atributo]</em>.
             </p>
             <table>
-              <th>
+              <thead>
                 <tr>
-                  <td>Atributo o valor</td>
+                  <th colspan="2">Atributo o valor</th>
                 </tr>
-              </th>
+              </thead>
               <tbody>
                 <tr
                   ><td>[attr=valor]</td>
@@ -400,14 +400,14 @@
         <ul>
           <li>
             <a href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/"
-              >Flexbox</a
+            target="_blank">Flexbox</a
             >
           </li>
-          <li><a href="https://getbem.com/introduction/">BEM</a></li>
-          <li><a href="https://sass-guidelin.es/es/">Sass</a></li>
-          <li><a href="https://nekocalc.com/es">Calculadoras</a></li>
-          <li><a href="https://learncssgrid.com/">Grid</a></li>
-          <li><a href="https://fontawesome.com/icons">Iconos</a></li>
+          <li><a href="https://getbem.com/introduction/" target="_blank">BEM</a></li>
+          <li><a href="https://sass-guidelin.es/es/" target="_blank">Sass</a></li>
+          <li><a href="https://nekocalc.com/es" target="_blank">Calculadoras</a></li>
+          <li><a href="https://learncssgrid.com/" target="_blank">Grid</a></li>
+          <li><a href="https://fontawesome.com/icons" target="_blank">Iconos</a></li>
         </ul>
       </div>
     </footer>
