--- a/esquema-css-dk/html/trabajo.html
+++ b/esquema-css-dk/html/trabajo.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&family=Lily+Script+One&display=swap"
       rel="stylesheet"
     />
     <link
@@ -845,15 +845,25 @@
         <span>Enlaces de interés</span>
         <ul>
           <li>
-            <a href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/"
+            <a
+              href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/"
+              target="_blank"
               >Flexbox</a
             >
           </li>
-          <li><a href="https://getbem.com/introduction/">BEM</a></li>
-          <li><a href="https://sass-guidelin.es/es/">Sass</a></li>
-          <li><a href="https://nekocalc.com/es">Calculadoras</a></li>
-          <li><a href="https://learncssgrid.com/">Grid</a></li>
-          <li><a href="https://fontawesome.com/icons">Iconos</a></li>
+          <li>
+            <a href="https://getbem.com/introduction/" target="_blank">BEM</a>
+          </li>
+          <li>
+            <a href="https://sass-guidelin.es/es/" target="_blank">Sass</a>
+          </li>
+          <li>
+            <a href="https://nekocalc.com/es" target="_blank">Calculadoras</a>
+          </li>
+          <li><a href="https://learncssgrid.com/" target="_blank">Grid</a></li>
+          <li>
+            <a href="https://fontawesome.com/icons" target="_blank">Iconos</a>
+          </li>
         </ul>
       </div>
     </footer>
